# CreativeForgeAI

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Creative_Automation_Pipeline_Complete_Specs_v2.0.md  Dockerfile  FEATURES.md  GITHUB_UPLOAD_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  SECURITY.md  agent-sentry.config.json  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent-sentry/data/: ops.db
docs/: ARCHITECTURE.md  BACKENDS.md  BASELINE.md  ENHANCED_REPORTING.md  ENTERPRISE_READINESS_ANALYSIS.md  FOUND_ISSUES.md  HANDOFF_PROMPT.md  IMAGE_QUALITY_OPTIMIZATION.md  PACKAGES.md  PHASE1_IMPLEMENTATION_GUIDE.md  SPECIFICATIONS_V2.md  TECHNICAL_ANALYSIS_PATTERNS_GENAI.md
docs/videos/: email
examples/: my_campaign.json  premium_tech_campaign.json  premium_tech_campaign_enhanced_2026-01-20T17-55-02.json
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: assets.ts  auth.ts  brands.ts  campaigns.ts  client.ts  metrics.ts  openapi.json  types.ts
frontend/src/components/charts/: BusinessMetricsChart.tsx  CampaignComparisonChart.tsx  TechnicalMetricsChart.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts  useCampaigns.ts  useMetrics.ts  useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: AssetGallery.tsx  BrandDetail.tsx  BrandList.tsx  CampaignBuilder.tsx  CampaignDetail.tsx  CampaignList.tsx  ComplianceReview.tsx  Dashboard.tsx  JobMonitor.tsx  Login.tsx  MetricsDashboard.tsx  Register.tsx  Settings.tsx
frontend/src/store/: authStore.ts
scripts/: README.md
src/: __init__.py  __main__.py  cache.py  campaign_generator.py  cli.py  config.py  exceptions.py  image_effects.py  image_processor.py  legal_checker.py  pipeline.py  pipeline_metrics.py  security.py  storage.py  storage_backend.py  storage_factory.py  storage_local.py  storage_s3.py
src/api/: __init__.py  authz.py  dependencies.py  errors.py  main.py  schemas.py
src/api/routes/: assets.py  auth.py  brands.py  campaigns.py  compliance.py  jobs.py  metrics.py  settings.py  ws.py
src/db/: base.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 53a16420a6ea_baseline_schema.py  b1f2c3d4e5a6_compliance_is_compliant_nullable.py  c7d8e9f0a1b2_brand_guidelines_created_by_index.py  da96efc5089e_tz_aware_timestamp_columns.py
src/db/repositories/: __init__.py  asset_repo.py  brand_repo.py  campaign_repo.py  compliance_repo.py  job_repo.py  metrics_repo.py  user_repo.py
src/genai/: __init__.py  base.py  claude.py  claude_service_image.py  factory.py  firefly.py  gemini_service.py  openai_service.py
src/jobs/: queue.py  tasks.py  worker.py
src/models/: __init__.py  campaign.py  enums.py  guidelines.py  text_styles.py
src/parsers/: brand_parser.py  legal_parser.py  localization_parser.py
tests/: conftest.py  test_cli.py  test_config.py  test_genai.py  test_image_processor.py  test_models.py  test_paid_gating.py  test_parsers.py  test_phase1_features.py  test_pipeline.py  test_storage.py
tests/integration/: conftest.py  harness.py  test_api_assets.py  test_api_auth.py  test_api_authz.py  test_api_brands.py  test_api_campaigns.py  test_api_compliance.py  test_api_jobs.py  test_api_metrics.py  test_api_rate_limit.py  test_api_settings.py  test_api_ws.py  test_e2e_campaign.py  test_harness_smoke.py
tests/unit/: test_exceptions.py  test_gemini_service.py  test_image_effects.py  test_legal_checker.py  test_legal_parser.py  test_security.py  test_storage_backend.py  test_storage_factory.py  test_storage_s3.py  test_storage_security.py
