[project]
name = "adobe-genai-platform"
version = "2.0.0"
description = "AI-powered creative automation platform"
requires-python = ">=3.11"
# Core: always needed by the CLI pipeline. The API/DB/worker/S3 runtime stack
# lives in the optional-dependency groups below so that `pip install -e "."`
# yields a working CLI without pulling in the server stack.
dependencies = [
    "pydantic[email]>=2.5.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.1",
    "Pillow>=10.3.0",
    "psutil>=5.9.0",
    "PyMuPDF>=1.23.8",
    "python-docx>=1.1.0",
    "PyYAML>=6.0.1",
    "click>=8.1.7",
    "structlog>=24.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
# API server + auth + the DB layer it depends on. Install with:
#   pip install -e ".[api]"
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.7",
    "httpx>=0.27.0",
    # DB layer (shared with the worker group; pip dedupes the overlap)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]
# Background worker (arq/redis) + the same DB layer the worker reads/writes.
worker = [
    "arq>=0.26.0",
    "redis>=5.0.0",
    # DB layer (shared with the api group; pip dedupes the overlap)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]
# S3-compatible object storage.
s3 = [
    "boto3>=1.34.0",
    "aioboto3>=13.0.0",
    "aiofiles>=24.1.0",
]
# Test tooling. Kept as a distinct group (rather than folded into dev) so CI can
# install just the runtime test deps without the lint/type/pre-commit toolchain.
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]
# Contributor tooling. This project formats with `ruff format` (see
# [tool.ruff.format]) rather than black, so no black here. dev includes test so
# that `pip install -e ".[dev]"` gives contributors lint + types + the test suite.
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "adobe-genai-platform[test]",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--asyncio-mode=auto",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests (real Postgres/Redis/MinIO, no paid APIs)",
    "unit: marks tests as unit tests (no I/O, fully mocked)",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
    "paid: makes REAL paid provider calls (costs money). SKIPPED by default; set RUN_PAID_TESTS=1 to run.",
    "paid_matrix: the full backend x locale x ratio worst-case matrix (~45 paid calls). NEVER in the default/PR-CI path; requires BOTH RUN_PAID_TESTS=1 and RUN_FULL_MATRIX=1.",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no print statements)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert used (needed in tests)
    # FastAPI idiom: `param: T = Depends(...)` / `Query(...)` etc. evaluate the
    # default at definition time on purpose. flake8-bugbear's B008 flags every
    # route signature as a "function call in default argument" — a pure false
    # positive for this codebase's FastAPI dependency-injection style.
    "B008",
    # We expose `CacheUnavailable` (and similar) as public, already-imported
    # exception names. The `*Error` suffix nudge (N818) isn't worth churning
    # every call site / import for.
    "N818",
    # `class X(str, Enum)` is used deliberately for JSON-serializable enums.
    # UP042 would rewrite them to `enum.StrEnum`, which changes `str(member)` to
    # return the bare value instead of `ClassName.MEMBER` — a runtime behavior
    # change in serialization/logging we don't want as part of CI hardening.
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use hardcoded fake passwords/tokens (S105/S106), temp dirs
# under /tmp (S108), assert (S101), and print (T20). The full flake8-bandit (S)
# suite is noise in the test tree; keep it enforced in `src/`. E402 is allowed
# because several test modules import deliberately late — after env/SECRET_KEY
# setup or after explanatory section banners.
"tests/**/*.py" = ["S", "T20", "E402"]
# Pydantic v2 `@field_validator` methods take `cls` as the first arg by
# convention; ruff's N805 ("first arg should be self") is a false positive here.
"src/models/**/*.py" = ["N805"]
# `token_type: str = "bearer"` is an OAuth2 response field name, not a secret —
# S105's "possible hardcoded password" heuristic misfires on the literal.
"src/api/schemas.py" = ["S105"]
# `cache.close()` swallows shutdown errors on a best-effort connection teardown;
# S110 (try/except/pass) is acceptable for idempotent cleanup.
"src/cache.py" = ["S110"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
